tests/fixtures/LatestTests/VariableDeclarationTests/errors/uninitialized_use_in_assignment.fg
/; EXPECT_ERROR: VariableNotFound
y = x
var x:int = 10
var y:int = 20

